--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             target="_blank">
             Pastor Eurico Calheiros 9 A - Jacintinho</a></li>
         <li>Nos siga nas nossas redes socias: <strong><a style="color: pink;" href="https://www.instagram.com/broadfarma" target="_blank">Instagram</a></strong> e <strong><a style="color:rgb(126, 126, 255);" href="https://www.facebook.com/broadfarma" target="_blank">Facebook</a></strong></li>
-        <li>Para mais informações entre em contanto no <strong><a href="https://api.whatsapp.com/send?1=pt_BR&phone=558288668766" target="_blank">click aqui</a></strong></li>
+        <li>Para mais informações <strong><a href="https://api.whatsapp.com/send?1=pt_BR&phone=558288668766" target="_blank">click aqui</a></strong></li>
       </ul>
     </section>
     <section id="products-table">
