--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             href="https://www.google.com/maps/place/9%C2%B038'10.7%22S+35%C2%B043'02.5%22W/@-9.6363461,-35.7174467,21z/data=!4m5!3m4!1s0x0:0x0!8m2!3d-9.6363144!4d-35.7173582?hl=en"
             target="_blank">
             Pastor Eurico Calheiros 9 A - Jacintinho</a></li>
-        <li>Nos siga nas nossas redes socias: <strong><a style="color: pink;" href="https://www.instagram.com/broadfarma" target="_blank">Instagram</a></strong> e <strong><a style="color:rgb(126, 126, 255);" href="https://www.facebook.com/broadfarma" target="_blank">Facebook</a></strong></li>
+        <li>Nos siga nas nossas redes socias: <strong><a href="https://www.instagram.com/broadfarma" target="_blank">Instagram</a></strong> e <strong><a href="https://www.facebook.com/broadfarma" target="_blank">Facebook</a></strong></li>
         <li>Para mais informações <strong><a href="https://api.whatsapp.com/send?1=pt_BR&phone=558288668766" target="_blank">click aqui</a></strong></li>
       </ul>
     </section>
