--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </ul>
     </section>
     <section id="products">
-      <h3>Alguns de nossos produtos</h3>
+      <h3>Alguns dos nossos produtos</h3>
       <div id="products-table">
         <div class="product"><img src="./assets/products/1.jpeg"></div>
         <div class="product"><img src="./assets/products/2.jpeg"></div>
