--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <h2>Boas vindas!</h2>
       <h3><strong>Informações importantes</strong></h3>
       <ul>
-        <li> - De <strong>segunda a sexta</strong> ficamos aberto das 8 horas às 20 horas</li>
-        <li> - Nos <strong>Sábados</strong> ficamos aberto das 8 horas às 18 horas</li>
-        <li> - Entregas de <strong>Segunda a Sábado</strong> estão <strong>disponíveis</strong> a partir de 8 horas às 18
+        <li> - De <strong>segunda a sexta</strong> ficamos aberto das 8 às 20 horas</li>
+        <li> - Nos <strong>Sábados</strong> ficamos aberto das 8 às 18 horas</li>
+        <li> - Entregas de <strong>Segunda a Sábado</strong> estão <strong>disponíveis</strong> a partir de 8 às 18
           horas
         <li>
         <li> - Estamos localcalizados na rua <a
