--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <nav>
+    <h1 id="hidden-seo">farmacia broadfarma</h1>
     <div class="logo"><img src="./assets/images/menu-logo.png" alt=""></div>
     <ul class="nav-links">
       <li><a href="#top">Home</a></li>
