--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li><a href="#top">Home</a></li>
       <li><a href="#important-information">Informações</a></li>
       <li><a href="#products">Produtos</a></li>
-      <li id="contact-button"><a href="https://api.whatsapp.com/send?1=pt_BR&phone=558288668766">WhatsApp</a></li>
+      <li id="contact-button"><a href="https://api.whatsapp.com/send?1=pt_BR&phone=558288668766" target="_blank">WhatsApp</a></li>
     </ul>
   </nav>
   <header>
