--- a/index.html
+++ b/index.html
@@ -29,15 +29,13 @@
       <h2>Boas vindas!</h2>
       <h3><strong>Informações importantes</strong></h3>
       <ul>
-        <li> - De <strong>segunda a sexta</strong> ficamos aberto das 8 às 20 horas</li>
-        <li> - Nos <strong>Sábados</strong> ficamos aberto das 8 às 18 horas</li>
-        <li> - Entregas de <strong>Segunda a Sábado</strong> estão <strong>disponíveis</strong> a partir de 8 às 18
-          horas
-        <li>
+        <li> - De <strong>segunda a sexta</strong> ficamos aberto das 8h às 20h</li>
+        <li> - Nos <strong>Sábados</strong> ficamos aberto das 8h às 18h</li>
+        <li> - Entregas de <strong>Segunda a Sábado</strong> estão <strong>disponíveis</strong> a partir de 8h às 18h</li>
         <li> - Estamos localcalizados na rua <a
             href="https://www.google.com/maps/place/9%C2%B038'10.7%22S+35%C2%B043'02.5%22W/@-9.6363461,-35.7174467,21z/data=!4m5!3m4!1s0x0:0x0!8m2!3d-9.6363144!4d-35.7173582?hl=en"
             target="_blank">
-            Pastor Eurico Calheiros 9 A - Jacintinho</a></li>
+            Pastor Eurico Calheiros - Jacintinho</a></li>
         <li> - Nos siga nas redes socias: <strong><a href="https://www.instagram.com/broadfarma"
               target="_blank">Instagram</a></strong> e <strong><a href="https://www.facebook.com/broadfarma"
               target="_blank">Facebook</a></strong></li>
