--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <li> - Nos <strong>Sábados</strong> ficamos aberto das 8h às 18h</li>
         <li> - Entregas de <strong>Segunda a Sábado</strong> estão <strong>disponíveis</strong> a partir de 8h às 18h</li>
         <li> - Estamos localcalizados na rua <a
-            href="https://www.google.com/maps/place/Broadfarma/@-9.6362468,-35.7195137,17z/data=!3m1!4b1!4m5!3m4!1s0x701458f2e2d7d87:0x462d2ba5060690b5!8m2!3d-9.6362468!4d-35.717325"
+            href="https://www.google.com/maps/place/Broadfarma/@-9.6362468,-35.7195137,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x462d2ba5060690b5!8m2!3d-9.6362468!4d-35.717325?authuser=3"
             target="_blank">
             Pastor Eurico Calheiros - Jacintinho</a></li>
         <li> - Nos siga nas redes socias: <strong><a href="https://www.instagram.com/broadfarma"
@@ -79,7 +79,7 @@
     </div>
     <div class="address-container">
       <div class="location-container"><a
-          href="https://www.google.com/maps/place/Broadfarma/@-9.6362468,-35.7195137,17z/data=!3m1!4b1!4m5!3m4!1s0x701458f2e2d7d87:0x462d2ba5060690b5!8m2!3d-9.6362468!4d-35.717325"
+          href="https://www.google.com/maps/place/Broadfarma/@-9.6362468,-35.7195137,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x462d2ba5060690b5!8m2!3d-9.6362468!4d-35.717325?authuser=3"
           target="_blank"><img src="./assets/images/google-maps-logo.jpg" alt="google-maps"> Rua
           Pastor Eurico Calheiros 9 A - Jacintinho</a>
       </div>
