--- a/index.html
+++ b/index.html
@@ -29,18 +29,9 @@
       <h2>Boas vindas!</h2>
       <h3><strong>Informações importantes</strong></h3>
       <ul>
-        <li> - De <strong>segunda a sexta</strong> ficamos aberto das 8h às 20h</li>
-        <li> - Nos <strong>Sábados</strong> ficamos aberto das 8h às 18h</li>
+        <li> - De <strong>segunda a sexta</strong> das 8h às 20h</li>
+        <li> - Nos <strong>Sábados</strong> das 8h às 18h</li>
         <li> - Entregas de <strong>Segunda a Sábado</strong> estão <strong>disponíveis</strong> a partir de 8h às 18h</li>
-        <li> - Estamos localcalizados na rua <a
-            href="https://www.google.com/maps/place/Broadfarma/@-9.6362468,-35.7195137,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x462d2ba5060690b5!8m2!3d-9.6362468!4d-35.717325?authuser=3"
-            target="_blank">
-            Pastor Eurico Calheiros - Jacintinho</a></li>
-        <li> - Nos siga nas redes socias: <strong><a href="https://www.instagram.com/broadfarma"
-              target="_blank">Instagram</a></strong> e <strong><a href="https://www.facebook.com/broadfarma"
-              target="_blank">Facebook</a></strong></li>
-        <li> - Para mais informações <strong><a href="https://api.whatsapp.com/send?1=pt_BR&phone=558288668766"
-              target="_blank">click aqui</a></strong></li>
       </ul>
     </section>
     <section id="products">
