--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
         <div class="product"><img src="./assets/products/2.jpeg"></div>
         <div class="product"><img src="./assets/products/3.jpeg"></div>
         <div class="product"><img src="./assets/products/4.jpeg"></div>
-        <div class="product"><img src="./assets/products/5.jpeg"></div>
+<!--         <div class="product"><img src="./assets/products/5.jpeg"></div> -->
         <div class="product"><img src="./assets/products/6.jpeg"></div>
         <div class="product"><img src="./assets/products/7.jpeg"></div>
-        <div class="product"><img src="./assets/products/8.jpeg"></div>
-        <div class="product"><img src="./assets/products/9.jpeg"></div>
-        <div class="product"><img src="./assets/products/10.jpeg"></div>
+<!--         <div class="product"><img src="./assets/products/8.jpeg"></div> -->
+<!--         <div class="product"><img src="./assets/products/9.jpeg"></div> -->
+<!--         <div class="product"><img src="./assets/products/10.jpeg"></div> -->
         <div class="product"><img src="./assets/products/11.jpeg"></div>
-        <div class="product"><img src="./assets/products/12.jpeg"></div>
-        <div class="product"><img src="./assets/products/13.jpeg"></div>
+<!--         <div class="product"><img src="./assets/products/12.jpeg"></div> -->
+<!--         <div class="product"><img src="./assets/products/13.jpeg"></div> -->
         <div class="product"><img src="./assets/products/14.jpeg"></div>
-        <div class="product"><img src="./assets/products/15.jpeg"></div>
+<!--         <div class="product"><img src="./assets/products/15.jpeg"></div> -->
         <div class="product"><img src="./assets/products/16.jpeg"></div>
         <div class="product"><img src="./assets/products/17.jpeg"></div>
-        <div class="product"><img src="./assets/products/18.jpeg"></div>
+<!--         <div class="product"><img src="./assets/products/18.jpeg"></div> -->
         <div class="product"><img src="./assets/products/19.jpeg"></div>
         <div class="product"><img src="./assets/products/20.jpeg"></div>
         <div class="product"><img src="./assets/products/21.jpeg"></div>
