--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
   <main>
     <section id="important-information">
       <h2>Boas vindas!</h2>
-      <h3><strong>Informações importantes</strong></h3>
+      <h3><strong>Horário de funcionamento</strong></h3>
       <ul>
-        <li> - De <strong>segunda a sexta</strong> das 8h às 20h</li>
-        <li> - Nos <strong>Sábados</strong> das 8h às 18h</li>
-        <li> - Entregas de <strong>Segunda a Sábado</strong> estão <strong>disponíveis</strong> das 8h às 18h</li>
+        <li>De <strong>segunda a sexta</strong> das 8h às 20h</li>
+        <li>Nos <strong>Sábados</strong> das 8h às 18h</li>
+        <li>Entregas de <strong>Segunda a Sábado</strong> estão <strong>disponíveis</strong> das 8h às 18h</li>
       </ul>
     </section>
     <section id="products">
