--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!--         <div class="product"><img src="./assets/products/8.jpeg"></div> -->
 <!--         <div class="product"><img src="./assets/products/9.jpeg"></div> -->
 <!--         <div class="product"><img src="./assets/products/10.jpeg"></div> -->
-        <div class="product"><img src="./assets/products/11.jpeg"></div>
+<!--         <div class="product"><img src="./assets/products/11.jpeg"></div> -->
 <!--         <div class="product"><img src="./assets/products/12.jpeg"></div> -->
 <!--         <div class="product"><img src="./assets/products/13.jpeg"></div> -->
         <div class="product"><img src="./assets/products/14.jpeg"></div>
