--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <ul>
         <li>De <strong>segunda a sexta</strong> das 8h às 20h</li>
         <li>Nos <strong>Sábados</strong> das 8h às 18h</li>
-        <li>Entregas de <strong>Segunda a Sábado</strong> estão <strong>disponíveis</strong> das 8h às 18h</li>
+        <li>Entregas de <strong>Segunda a Sábado</strong> das 8h às 18h</li>
       </ul>
     </section>
     <section id="products">
